[tool.poetry]
name = "image-embedding-visualization-analysis"
version = "0.1.0"
description = ""
authors = ["Qamil-Mirza <qamilmirza@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dash = "2.17.1"
numpy = "2.0.0"
pandas = "2.2.2"
pillow = "10.4.0"
plotly = "5.22.0"
scikit-learn = "1.5.1"
torch = "2.4.0"
tqdm = "4.66.4"
transformers = "4.44.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
